Mock API toegevoegd: volledig functioneel zonder externe credentials, export/import functionaliteit

--- a/index.html
+++ b/index.html
@@ -2473,6 +2473,7 @@
     <script src="scripts/competitions-init.js"></script>
     <script src="scripts/members-login.js"></script>
     <script src="scripts/members-sections.js"></script>
+    <script src="scripts/lineup-api-mock.js"></script>
     <script src="scripts/coach-manager.js"></script>
     <script src="scripts/admin-manager.js"></script>
 </body>
