Fix: Logo y tÃ­tulo en home ahora estÃ¡n juntos, logo a la izquierda del tÃ­tulo

--- a/index.html
+++ b/index.html
@@ -122,13 +122,15 @@
             <div class="home-content-wrapper">
                 <!-- Main Title Animation -->
                 <div class="home-title-section">
-                    <div class="home-logo-animated">
-                        <img src="images/logos/100b.jpeg" alt="RFC Lissewege" class="animated-logo">
+                    <div class="home-title-wrapper">
+                        <div class="home-logo-animated">
+                            <img src="images/logos/100b.jpeg" alt="RFC Lissewege" class="animated-logo">
+                        </div>
+                        <h1 class="home-main-title">
+                            <span class="title-word" data-word="R.F.C.">R.F.C.</span>
+                            <span class="title-word" data-word="Lissewege">Lissewege</span>
+                        </h1>
                     </div>
-                    <h1 class="home-main-title">
-                        <span class="title-word" data-word="R.F.C.">R.F.C.</span>
-                        <span class="title-word" data-word="Lissewege">Lissewege</span>
-                    </h1>
                     <p class="home-subtitle">"Samen sterk, op naar de overwinning!"</p>
                 </div>
 
