--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description"
         content="R.F.C. Lissewege - Samen sterk, op naar de overwinning! Voetbalclub in Lissewege, Brugge">
     <meta name="theme-color" content="#0d4d2e">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
